fix description overflow on store collection
git-svn-id: https://repos.nextthought.com/svn/nti-svn/NextThoughtWebApp/trunk@23479 3dfb626b-079f-4ab1-a9f6-4654e5377508

--- a/src/main/resources/scss/_library.scss
+++ b/src/main/resources/scss/_library.scss
@@ -43,6 +43,7 @@
 			}
 			.meta {
 				position: absolute;
+				overflow: hidden;
 				bottom: 0; left: 0; right: 0;
 				background: rgba(0,0,0,0.9);
 				color: #fff;
@@ -63,6 +64,7 @@
 				}
 
 				.description,.author {
+					overflow: hidden;
 					display: none;
 				}
 			}
@@ -71,6 +73,7 @@
 				.meta{
 					.description {
 						display: block;
+
 					}
 				}
 			}
